Bug 1664172 - Remove the MOZ_RELEASE_ASSERT on the CUPS dinfo r=emilio

Add a separate field to CUPSPrinterInfo to track if we attempted to fetch the
printer info before.

This should be safe, as all the CUPS calls internally check for a null-dinfo
and we will detect the error at that point.

Differential Revision: https://phabricator.services.mozilla.com/D89847